--- a/aula011/index.html
+++ b/aula011/index.html
@@ -6,29 +6,9 @@
     <title>Datas em JavaScript</title>
 </head>
 <body>
-    <h1>Datas em JavaScript</h1>
-    <script>
-        // Criando uma data específica: 25 de dezembro de 2023
-        const dataEspecifica = new Date(2023, 11, 25); // Mês é 0-indexado (0 = janeiro, 11 = dezembro)
-        console.log("Data específica:", dataEspecifica.toString());
+<h1>Manipulação de Datas em JavaScript</h1>
+<p id="data-atual"></p>
 
-        // Obtendo a data e hora atual
-        const dataAtual = new Date();
-        console.log("Data e hora atual:", dataAtual.toString());
-
-        // Extraindo componentes da data atual
-        const ano = dataAtual.getFullYear();
-        const mes = dataAtual.getMonth() + 1; // Adiciona 1 para ajustar o índice do mês
-        const dia = dataAtual.getDate();
-        const horas = dataAtual.getHours();
-        const minutos = dataAtual.getMinutes();
-        const segundos = dataAtual.getSeconds();
-
-        console.log(`Ano: ${ano}, Mês: ${mes}, Dia: ${dia}`);
-        console.log(`Horas: ${horas}, Minutos: ${minutos}, Segundos: ${segundos}`);
-
-        // Formatando a data em uma string legível
-        const dataFormatada = `${dia}/${mes}/${ano} ${horas}:${minutos}:${segundos}`;
-        console.log("Data formatada:", dataFormatada);
+<script src="JS/script.js"></script>
 </body>
 </html>
